--- a/templates/blog/widgets/header.html
+++ b/templates/blog/widgets/header.html
@@ -1,7 +1,7 @@
 {% load blogfilter %}
 <header class="jumbotron text-center bg-light">
   <div class="container">
-    <h1 class="blog-title"><span>学習記録</span></h1>
+    <h1 class="blog-title"><span>Programing&nbsp;Log</span></h1>
     <p>このブログはDjangoで作成しました</p>
   </div>
 </header>
