--- a/templates/blog/comment_form.html
+++ b/templates/blog/comment_form.html
@@ -40,8 +40,12 @@
 
   {% endfor %}<!-- formset終了 -->
   {% csrf_token %}
-  <button class="btn btn-{{ mysite.color }}" type="submit">コメントする</button>
-  <a class="btn btn-{{ mysite.color }}" href="{% url 'blog:detail' post.pk %}" rel="nofollow">戻る</a>
+
+    {# ReCaptha #}
+    <script src='https://www.google.com/recaptcha/api.js'></script>
+    <div class="g-recaptcha" data-sitekey="6Lcd32YUAAAAAM-jFFzGYLrqNtny1-MI8PRLn6Tr"></div>
+    <button class="btn btn-{{ mysite.color }}" type="submit">コメントする</button>
+    <a class="btn btn-{{ mysite.color }}" href="{% url 'blog:detail' post.pk %}" rel="nofollow">戻る</a>
 </form>
 
 {% endblock %}
