--- a/templates/blog/widgets/detail_card.html
+++ b/templates/blog/widgets/detail_card.html
@@ -31,7 +31,7 @@
       <hr>
 
       {% if user.is_authenticated %}
-        <a href="{% url 'admin:blog_post_change' post.pk %}">管理画面へ</a>
+        <a href="{% url 'admin:blog_post_change' post.pk %}">編集する</a>
         <hr>
       {% endif %}
 
