--- a/templates/blog/widgets/list_card.html
+++ b/templates/blog/widgets/list_card.html
@@ -19,10 +19,6 @@
   
     <!-- card-bodyの右側 -->
     <div class="col-xs-12 col-sm-6">
-      <span class="badge badge-{{ mysite.color }} badge-pill">{% by_the_time post.created_at %}</span>
-      <span class="badge badge-{{ mysite.color }} badge-pill">{{ post.created_at }}</span>
-      <br>
-  
       <span class="badge badge-{{ mysite.color }}">
         <a class="text-white" href="{% url 'blog:category' post.category.name %}">{{ post.category.name }}</a>
       </span>
@@ -36,13 +32,17 @@
       <hr>
   
       <a class="btn btn-outline-{{ mysite.color }} btn-lg btn-block" href="{% url 'blog:detail' post.pk %}">続きを読む</a>
-      <br>
-  
-      {% if user.is_authenticated %}
-        <a href="{% url 'admin:blog_post_change' post.pk %}">管理画面へ</a>
-      {% endif %}
+
     </div><!-- card-bodyの右側おわり -->
-  
+
+      {# card-footer #}
+    <div class="card-footer bg-white">
+        <span class="badge badge-pill">{% by_the_time post.created_at %}</span>
+        <span class="badge badge-pill">{{ post.created_at }}</span>
+        {% if user.is_authenticated %}
+            <a href="{% url 'admin:blog_post_change' post.pk %}">編集する</a>
+        {% endif %}
+    </div>
   </div><!-- card-body終了 -->
 
 </div>
