change direct name, to conf.

--- a/static/blog/css/base.css
+++ b/static/blog/css/base.css
@@ -82,12 +82,15 @@ body {
 }
 
 .card-footer {
-  padding: 13px 0px;
-  color: dimgray;
+  padding: 13px 25px;
 }
 
 .card-body {
   padding-bottom: 10px;
+}
+
+.badge {
+  color: dimgray;
 }
 
 .jumbotron {
