--- a/templates/blog/widgets/detail_card.html
+++ b/templates/blog/widgets/detail_card.html
@@ -14,8 +14,8 @@
   </div>
 
   <div class="card-body">
-      <span class="badge badge-{{ mysite.color }} badge-pill">{% by_the_time post.created_at %}</span>
-      <span class="badge badge-{{ mysite.color }} badge-pill">{{ post.created_at }}</span>
+      <span class="badge badge-pill">{% by_the_time post.created_at %}</span>
+      <span class="badge badge-pill">{{ post.created_at }}</span>
       <br>
 
       <span class="badge badge-{{ mysite.color }}">
