--- a/templates/blog/widgets/side_comment.html
+++ b/templates/blog/widgets/side_comment.html
@@ -7,7 +7,7 @@
   {% for comment in comments  %}
   <a class="list-group-item" href="{% url 'blog:detail' comment.target.pk %}#comment-area" rel="nofollow">
       {{ comment.name }}(返信:{{ comment.num_recomments }})
-      <span class="badge badge-{{ mysite.color }} badge-pill float-right text-white">{% by_the_time comment.created_at %}</span>
+      <span class="badge badge-pill float-right">{% by_the_time comment.created_at %}</span>
   </a>
   {% endfor %}    
 </div> <!-- コメント一覧終了 -->
