--- a/templates/blog/widgets/header.html
+++ b/templates/blog/widgets/header.html
@@ -2,6 +2,6 @@
 <header class="jumbotron text-center bg-light">
   <div class="container">
     <h1 class="blog-title"><span>Programing&nbsp;Log</span></h1>
-    <p>このブログはDjangoで作成しました</p>
+    <p>プログラミング学習のアウトプット＆備忘録</p>
   </div>
 </header>
