--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="{% block meta_key %}{% endblock %}">
     <meta name="description" content="{% block meta_des %}{% endblock %}">
 
-    <title>{% block title %}{% endblock %}</title>
+    <title>Programing Log</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
